# Security-and-cryptography

./: Exercise 1.docx  Exercise 2.docx  Exercise 3.docx
.github/workflows/: ci.yml  cmake.yml
Exam masterprogram/: CBC_MAC.py  ElGamal.py  HMAC.py  LFSR.py  RSA.py  affine_chiffer.py  autokey.py  center_square.py  cheatsheet.txt  diffie_hellman.py  hill_chiffer.py  keyexpansion.py  multiplicative_inverse.py  permutation_chiffer.py  pollard.py  pollard_p-1.py  shanks_algorithm.py  square_and_multiply.py  substitution_chiffer.py  vigenere.py
Exercise 4/: a.out  out.txt  start_a.sh  start_b.sh  start_c.sh  start_d.sh
Exercise 4/task1/: hello.asm
Exercise 4/task2/: hello.c  hello.cpp  hello.rs
Exercise 4/task3/c-example/: CMakeLists.txt  LICENSE  README.md  a_function.c  a_function.h  c_example  main.c  more_functions.c  more_functions.h
Exercise 5/: .gitignore  CMakeLists.txt  concatenate.h  main.c
Exercise 5/.github/workflows/: ci.yml
Exercise 5/tests/: CMakeLists.txt  concatenate_fuzzer_test.c
Exercise 6/: CMakeLists.txt  a.out  pbkdf2.cpp
Exercise 6B/: client.js  server.js
Exercise 7/: chiffer.py  k_shift_chiffer.py  multiplicative_inverse.py  substitution_chiffer.py  vigenere.py
Exercise 8/: autokey.py  littleAES.py  vigenere.py
Exercise 9/: CBC_MAC.py  RSA.py  pollard.py
